# hcdl

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml  release.yaml
man/: hcdl.1
src/: cli.rs  client.rs  crc32.rs  error.rs  install.rs  lib.rs  main.rs  messages.rs  products.rs  progressbar.rs  shasums.rs  signature.rs  tmpfile.rs
src/client/: build.rs  config.rs  product_version.rs  version_check.rs
test-data/: check_terraform.json  get_version.json  shasums-check.txt  terraform_0.12.26_SHA256SUMS  terraform_0.12.26_SHA256SUMS.sig  terraform_0.15.1_SHA256SUMS.sig
