[package]
name = "hcdl"
description = "Easily download and update HashiCorp tools"
version = "0.12.0"
authors = ["David O'Rourke <david.orourke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/phyber/hcdl"
repository = "https://github.com/phyber/hcdl"
rust-version = "1.57.0"
resolver = "2"
categories = [
    "command-line-utilities",
]
keywords = [
    "cli",
    "hashicorp",
]
exclude = [
    ".gitignore",
    ".github",
]

[features]
default = [
    "embed_gpg_key",
    "shell_completion",
]

embed_gpg_key = []
shell_completion = [
    "clap_complete",
]

[dependencies]
anyhow = "1.0"
bytes = "1.3"
chrono = "0.4"
crc32fast = "1.3"
dirs = "4.0"
hex = "0.4"
indicatif = "0.17"
pgp = "0.9"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.3"

[dependencies.clap]
version = "4.0.32"
features = [
    "cargo",
    "deprecated",
    "env",
    "wrap_help",
]

[dependencies.clap_complete]
version = "4.0.7"
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "gzip",
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.23"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.url]
version = "2.3"
features = [
    "serde",
]

# Force this due to flate2 forcing us to lower zip versions, this is due to
# restrictions on flate2 versions in the zip-rs Cargo.toml
[dependencies.zip]
version = "0.6"
default-features = false
features = [
    "deflate",
]

[dev-dependencies]
mockito = "0.31"
once_cell = "1.16.0"
pretty_assertions = "1.3"
