[package]
name = "hcdl"
description = "Easily download and update HashiCorp tools"
version = "0.13.0"
authors = ["David O'Rourke <david.orourke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/phyber/hcdl"
repository = "https://github.com/phyber/hcdl"
rust-version = "1.74.1"
resolver = "2"
categories = [
    "command-line-utilities",
]
keywords = [
    "cli",
    "hashicorp",
]
exclude = [
    ".gitignore",
    ".github",
]

[[bin]]
name = "hcdl"
path = "src/main.rs"

[lib]
name = "hcdl"
path = "src/lib.rs"

[features]
default = [
    "embed_gpg_key",
    "shell_completion",
]

embed_gpg_key = []
shell_completion = [
    "clap_complete",
]

[dependencies]
anyhow = "1.0"
bytes = "1.5"
chrono = "0.4"
crc32fast = "1.3"
dirs = "5.0"
hex = "0.4"
indicatif = "0.17"
pgp = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.8"
thiserror = "1.0"

[dependencies.clap]
version = "4.3.24"
features = [
    "cargo",
    "deprecated",
    "env",
    "wrap_help",
]

[dependencies.clap_complete]
version = "4.3.2"
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "gzip",
    "http2",
    "json",
    "rustls-tls",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.33"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.url]
version = "2.4"
features = [
    "serde",
]

# Force this due to flate2 forcing us to lower zip versions, this is due to
# restrictions on flate2 versions in the zip-rs Cargo.toml
[dependencies.zip]
version = "1.1.1"
default-features = false
features = [
    "deflate",
]

[dev-dependencies]
mockito = "1.2"
pretty_assertions = "1.4"
